...
    var body: some View {
        VStack(alignment: .leading, spacing: 16) {
            HStack {
                LemonadeUi.Text("Connect a device", textStyle: LemonadeTypography.shared.headingSmall,
                                color: LemonadeTheme.colors.content.contentPrimary)
                Spacer()
                LemonadeUi.Button(label: "Done", onClick: { dismiss() }, variant: .neutral, type: .subtle, size: .small)
                    .fixedSize()
            }

            HStack(alignment: .top, spacing: 16) {
                qrView
                VStack(alignment: .leading, spacing: 6) {
...
